# SHL-Assessment-Recommender

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  IMPLEMENTATION-CHECKLIST.md  README.md  TASK.md  design-decisions.md  main.py  pyproject.toml
data/replay_runs/: replay_1778421866.jsonl  replay_1778431203.jsonl  replay_1778489750.jsonl  replay_1778503107.jsonl  replay_1778510596.jsonl  replay_1778510890.jsonl  replay_1778511400.jsonl  replay_1778512594.jsonl  replay_1778519406.jsonl
scripts/: build_index.py  probes_live.py  replay_live.py
src/shl_recommender/: __init__.py  config.py  main.py  schemas.py
src/shl_recommender/agent/: __init__.py  llm.py  prompts.py  router.py  runner.py  tools.py
src/shl_recommender/agent/handlers/: __init__.py  _base.py  clarify.py  compare.py  recommend.py  refine.py  refuse.py
src/shl_recommender/assembly/: __init__.py  reply.py  validator.py
src/shl_recommender/catalog/: __init__.py  loader.py  normalize.py  query_expansion.py  retrieval.py
src/shl_recommender/features/: __init__.py  pipeline.py
src/shl_recommender/observability/: __init__.py  logging.py
tests/: __init__.py
tests/integration/: __init__.py  fakes.py  test_agent.py  test_chat_endpoint.py
tests/replay/: __init__.py  harness.py  personas.py  probes.py  test_harness.py  test_personas.py  test_probes.py
tests/unit/: __init__.py  test_code_style.py  test_config.py  test_features.py  test_loader.py  test_normalize.py  test_query_expansion.py  test_reply.py  test_retrieval.py  test_smoke.py  test_validator.py
