[project]
name = "shl-assessment-recommender"
version = "0.1.0"
description = "Conversational SHL Assessment Recommender — FastAPI + Gemini hybrid agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "google-genai>=1.0.0",
    "numpy>=1.26.0",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.10.0",
    "pydantic>=2.9.0",
    "structlog>=24.4.0",
    "pyarrow>=18.0.0",
    "pandas>=2.2.0",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shl_recommender"]
